welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: Missing closing brace `}' assumed here
override def run() {
^SnakeBuggle:2: error: expected start of definition
override def run() {
         ^SnakeBuggle:20: error: expected class or object definition
def arrive() {
^