welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
 baisseBrosse()
 while (arrive() != false) 
 {
 	if (!estFaceMur())
 	  {avance()}
 	 else {if (getDirection == Direction.EST)
 	 		{ gauche()
 	 			if (!estFaceMur())
 	 			  {avance();gauche()}
 	 		}
 	 	   else {droite; if (!estFaceMur())
 	 	   				{avance();droite()}
 	 	   }}
 }
}


def arrive() {
	if (estFaceMur())
		{ if (getDirection() == Direction.EST)
			  {gauche()
			    if (estFaceMur())
			     { gauche; true()
			 	}}
			else { if (getDirection == Direction.OUEST)
					 {droite()
					 if (estFaceMur())
			     	  {droite; true()
					 }}
		}
	else return false
}

